ContentRecord 테이블 매핑 및 테스트코드 작성 (#23)
* :sparkles: ContentRecord 데이터베이스 매핑

* :white_check_mark: 커스텀 디펜스 기록과 관련한 테스트 추가 및 관련 코드 일부 수정

* :white_check_mark: 커스텀 디펜스 기록과 관련한 테스트 코드 수정

* :art: 테스트 기록 문제 생성의 책임을 테스트 기록 클래스로 이동

추상 클래스에서 추상 메서드 정의 및 Override를 통해 문제 리스트 생성의 책임을 ContentRecord로 옮겼습니다.

* :recycle: 커스텀 디펜스 기록과 관련 양방향 매핑 및 테스트 코드 수정

* :sparkles: 오늘의 문제 관련 테이블의 테스트 코드 작성

* :sparkles: 랜덤 디펜스 기록과 관련한 테스트 코드 작성

* :sparkles: 스테이지 모드 관련 테스트 코드 작성

* :pencil2: DisplayName에서 오늘의 문제 테스트를 오늘의 문제 테스트 응시 기록으로 변경

* :recycle: ContentProblemRecord와 관련한 정적 팩토리 메서드 패턴 적용

* :recycle: DailyTestProblems, CustomDefenseProblems에 대한 정적 펙토리 매서드 패턴 적용

* :pencil2: RandomDefense를 만드는 메서드를 따로 분리

* :recycle: 오늘의 문제 테스트 코드에서 세부 기록까지 DailyTestRecordTest에서 검증하도록 수정

* :recycle: 커스텀 랜덤 디펜스의 테스트 코드에서 세부 기록까지 CustomDefenseRecordTest에서 검증하도록 수정

* :recycle: 랜덤 디펜스의 테스트 코드에서 세부 기록까지 RandomDefenseRecordTest에서 검증하도록 수정

* :recycle: 스테이지 모드의 테스트 코드에서 세부 기록까지 StageDefenseRecordTest에서 검증하도록 수정

* :pencil2: 개행과 관련한 코드 일부 수정

* :recycle: 오늘의 문제 기록 예외와 관련된 경계값 테스트 추가

* :pencil2: 오늘의 문제 기록이 하루 이상 넘어가지 않을 때 정상적으로 등록되는 경계값 테스트 수정

* Algorithm 테이블 초기화 기능 추가 (#21)

* :art: Algorithm 필드 추가

Algorithm 테이블에 solved에서 취급하는 key와 bojTagId를 추가했습니다.

* :sparkles: 어플리케이션 시작 시 알고리즘 테이블 초기화

* :white_check_mark: AlgorithmRepository Test tearDown 메서드 추가

* :bug: @ Value Algorithms.json 주소 변경

* :pencil2: 스테이지 디펜스 기록 테스트와 관련하여 스테이지 번호를 시작 시 1번으로 고정

* :white_check_mark: RandomStageProblemRecord 유닛 테스트 추가, 초기 값 상수 설정

* :white_check_mark: CustomDefenseProblemRecord 유닛 테스트 추가

* :white_check_mark: DailyTestProblemRecord 테스트 코드 생성

* :white_check_mark: RandomDefenseProblemRecord 테스트 코드 생성

* :art: ContentProblemRecord 매직넘버 상수로 변경

* :fire: 필요 없는 SpringBootTest 어노테이션 제거

* :white_check_mark: StageDefenseProblemRecordTest 추가

* :white_check_mark: RandomDefenseProblemRecordTest 추가

* :white_check_mark: DailyTestProblemRecordTest 변경

* :white_check_